   * Fix decryption of zero length messages (all padding) in some circumstances:
     DTLS 1.0 and 1.2, and CBC ciphersuites using encrypt-then-MAC. Most often
     seen when communicating with OpenSSL using TLS 1.0. Reported by @kFYatek
     (#1632) and by Conor Murphy on the forum. Fix contributed by Espressif
     Systems.

Changes
   * Change the shebang line in Perl scripts to look up perl in the PATH.
     Contributed by fbrosson in #1533.

= mbed TLS 2.7.4 branch released 2018-06-18

Bugfix
   * Fix redundant declaration of mbedtls_ssl_list_ciphersuites. Raised by
     TrinityTonic. #1359.
   * Fix for redefinition of _WIN32_WINNT to avoid overriding a definition
     used by user applications. Found and fixed by Fabio Alessandrelli.
   * Fix braces in mbedtls_memory_buffer_alloc_status(). Found by sbranden, #552.
   * Fix an issue with MicroBlaze support in bn_mul.h which was causing the
     build to fail. Found by zv-io. Fixes #1651.
   * Fix compilation warnings with IAR toolchain, on 32 bit platform.
     Reported by rahmanih in #683

Changes
   * Support TLS testing in out-of-source builds using cmake. Fixes #1193.
   * Changed CMake defaults for IAR to treat all compiler warnings as errors.
   * Changed the Clang parameters used in the CMake build files to work for
     versions later than 3.6. Versions of Clang earlier than this may no longer
     work. Fixes #1072

= mbed TLS 2.7.3 branch released 2018-04-30

Security
   * Fix an issue in the X.509 module which could lead to a buffer overread
     during certificate validation. Additionally, the issue could also lead to
     unnecessary callback checks being made or to some validation checks to be
     omitted. The overread could be triggered remotely, while the other issues
     would require a non DER-compliant certificate to be correctly signed by a
     trusted CA, or a trusted CA with a non DER-compliant certificate. Found by
     luocm. Fixes #825.